Add documentation Add simple readme Migrate to gradle.kts Change group and package